--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,4 @@
-$backgroudcolor: brickred;
+$backgroudcolor: brown;
 
 body {
     color: $backgroudcolor;
@@ -18,5 +18,4 @@ h1 {
 p {
     font-size: 18px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin-left: 10%;
 }
